feat: :bug: un pequeño cambio

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             Desarrollador Full Stack
                         </h1>
                         <p class="m-0 mt-4 text-lg leading-8 text-body-secondary" data-aos-delay="100" data-aos="fade" data-aos-duration="1000">
-                            ¡Hola! Soy Tulio Santiago Mendoza Mora, estudiante en Campuslands, un centro especializado en desarrollo de software y programación. La tecnología ha sido una pasión desde mi infancia, y tengo una gran capacidad de adaptación en el cambiante mundo tecnológico. Aunque soy tímido, poseo fuertes habilidades de trabajo en equipo y una actitud proactiva que me impulsa a mejorar en cada proyecto.
+                            ¡Hola! Soy Tulio Santiago Mendoza Mora, estudiante en Campuslands, un centro especializado en desarrollo de software y programación. La tecnología ha sido una pasión desde mi infancia, y tengo una gran capacidad de adaptación en el cambiante mundo tecnológico. Poseo fuertes habilidades de trabajo en equipo y una actitud proactiva que me impulsa a mejorar en cada proyecto, buscando siempre aportar soluciones creativas y efectivas.
                         </p>
                         <div class="mt-4 pt-3" data-aos-delay="200" data-aos="fade" data-aos-duration="1000">
                             <a href="https://wa.me/573134963906" class="btn btn-lg btn-primary text-white text-sm fw-semibold">
